tests/fixtures/LatestTests/DynamicVariableTests/errors/dyn_str_to_int64.fg
/; EXPECT_ERROR: Runtime Error: Cannot cast Dynamic value to Int64.
var _str = "Hello"
println(Int64(_str))